--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 /build/
 /nbproject/
+
+*.vcxproj.user
+*.VC.opendb
+*.sdf
+
+win32/.vs/
+win32/Debug/
+win32/Release/
+win32/x64/
+
+win32/libuv/Debug/
+win32/libuv/Release/
+win32/libuv/x64/
+
+win32/ssr-client/Debug/
+win32/ssr-client/Release/
+win32/ssr-client/x64/
+
