--- a/win32/ssr-client/ssr-client.vcxproj
+++ b/win32/ssr-client/ssr-client.vcxproj
@@ -102,6 +102,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../include;../../depends/libuv/include;../../../shadowsocksr-libev/depends/openssl4w/openssl/include;../../../shadowsocksr-libev/depends/openssl4w/win32/include;../../src;../../gnulib/lib;../../chacha;../../libmd5-rfc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +119,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../include;../../depends/libuv/include;../../../shadowsocksr-libev/depends/openssl4w/openssl/include;../../../shadowsocksr-libev/depends/openssl4w/win32/include;../../src;../../gnulib/lib;../../chacha;../../libmd5-rfc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,6 +138,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../include;../../depends/libuv/include;../../../shadowsocksr-libev/depends/openssl4w/openssl/include;../../../shadowsocksr-libev/depends/openssl4w/win32/include;../../src;../../gnulib/lib;../../chacha;../../libmd5-rfc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -156,6 +159,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../include;../../depends/libuv/include;../../../shadowsocksr-libev/depends/openssl4w/openssl/include;../../../shadowsocksr-libev/depends/openssl4w/win32/include;../../src;../../gnulib/lib;../../chacha;../../libmd5-rfc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
