--- a/win32/ssr-client/ssr-client.vcxproj
+++ b/win32/ssr-client/ssr-client.vcxproj
@@ -27,7 +27,7 @@
     <ClCompile Include="..\..\src\client.c" />
     <ClCompile Include="..\..\src\main.c" />
     <ClCompile Include="..\..\src\s5.c" />
-    <ClCompile Include="..\..\src\server.c" />
+    <ClCompile Include="..\..\src\listener.c" />
     <ClCompile Include="..\..\src\util.c" />
     <ClCompile Include="..\src\getopt.c" />
     <ClCompile Include="..\src\getopt_long.c" />
