--- a/win32/s5proxy/s5proxy.vcxproj.filters
+++ b/win32/s5proxy/s5proxy.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="..\..\src\svr_impl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\daemon_wrapper.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\s5.h">
@@ -68,6 +71,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\sockaddr_universal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\daemon_wrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
