--- a/win32/s5proxy/s5proxy.vcxproj.filters
+++ b/win32/s5proxy/s5proxy.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="..\..\src\daemon_wrapper.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\udprelay.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\s5.h">
@@ -74,6 +77,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\daemon_wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\udprelay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
