web request module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ set(SOURCE_FILES
         dump_info.h
         udprelay.c
         udprelay.h
+        web_request.c
+        web_request.h
         svr_impl.c)
 
 if ((UNIX) AND (!APPLE))
