web_request class finished.

--- a/win32/s5proxy/s5proxy.vcxproj
+++ b/win32/s5proxy/s5proxy.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="..\..\src\s5.c" />
     <ClCompile Include="..\..\src\listener.c" />
     <ClCompile Include="..\..\src\udprelay.c" />
+    <ClCompile Include="..\..\src\web_request.c" />
     <ClCompile Include="..\src\getopt.c" />
     <ClCompile Include="..\src\getopt_long.c" />
   </ItemGroup>
@@ -43,6 +44,7 @@
     <ClInclude Include="..\..\src\s5.h" />
     <ClInclude Include="..\..\src\sockaddr_universal.h" />
     <ClInclude Include="..\..\src\udprelay.h" />
+    <ClInclude Include="..\..\src\web_request.h" />
     <ClInclude Include="..\include\getopt.h" />
     <ClInclude Include="..\include\getopt_long.h" />
     <ClInclude Include="..\include\unistd.h" />
