--- a/win32/s5proxy/s5proxy.vcxproj.filters
+++ b/win32/s5proxy/s5proxy.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="..\..\src\udprelay.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\web_request.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\s5.h">
@@ -80,6 +83,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\udprelay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\web_request.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
