--- a/win32/s5proxy/s5proxy.vcxproj
+++ b/win32/s5proxy/s5proxy.vcxproj
@@ -123,7 +123,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRTDBG_MAP_ALLOC;_CRT_SECURE_NO_WARNINGS;WITH_OPENSSL;HAVE_GETOPT_H;HAVE_UNISTD_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../include;../../depends/libuv/include;../../../shadowsocksr-libev/depends/openssl4w/openssl/include;../../../shadowsocksr-libev/depends/openssl4w/win32/include;../../src;../../gnulib/lib;../../chacha;../../libmd5-rfc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
